# SecureEpilinker

./: .dockerignore  .gitignore  .gitmodules  .gutctags  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Dockerfile.distroless  Dockerfile.ubuntu  LICENSE  README.md  httplisten.py  millionaire_prob_test.cpp  sepilinker.cpp
.github/workflows/: docker.yml
benchmarks/: benchmark_fields.sh  benchmark_sharings.sh  benchmark_sizes.sh  change_network_delay.sh  join_csv.py  parse_fieldbench_for_pub.sh  parse_for_pub.sh  parse_runs.py  run_local_ser.sh  run_remote_ser.sh
cmake/: ABY.CMakeLists.txt.in  ENCRYPTO_utils.CMakeLists.txt.in  External_ABY.cmake  External_ENCRYPTO_utils.cmake  External_MIRACL.cmake  External_OTExtension.cmake  MIRACL.CMakeLists.txt.in  OTExtension.CMakeLists.txt.in  cmake_install.cmake  patch-ABY.sh  patch-ENCRYPTO_utils.sh  patch-OTExtension.sh  patch-valijson.sh  restbed.patch  target_link_libraries_system.cmake
data/: init-schema.json  linkrecord-schema.json  local-init-schema.json  remote-init-schema.json  serverconf.json
data/circ/: README
data/circ/sel_int_div/: 10_10.aby  10_11.aby  10_12.aby  10_13.aby  10_14.aby  10_15.aby  10_16.aby  10_17.aby  10_18.aby  10_19.aby  10_2.aby  10_20.aby  10_21.aby  10_3.aby  10_4.aby  10_5.aby  10_6.aby  10_7.aby  10_8.aby  10_9.aby  11_10.aby  11_11.aby  11_12.aby  11_13.aby  11_14.aby  11_15.aby  11_16.aby  11_17.aby  11_18.aby  11_19.aby  11_2.aby  11_20.aby  11_21.aby  11_3.aby  11_4.aby  11_5.aby  11_6.aby  11_7.aby  11_8.aby  11_9.aby  (+180 more)
docs/: epirest_uml-design.graphml  prozessablauf.graphml
include/: apikeyconfig.hpp  authenticationconfig.hpp  authenticator.cpp  authenticator.h  base64.cpp  base64.h  circuit_builder.cpp  circuit_builder.h  circuit_config.cpp  circuit_config.h  circuit_input.cpp  circuit_input.h  clear_epilinker.cpp  clear_epilinker.h  configurationhandler.cpp  configurationhandler.h  connectionconfig.hpp  connectionhandler.cpp  connectionhandler.h  databasefetcher.cpp  databasefetcher.h  datahandler.cpp  datahandler.h  epilink_input.cpp  epilink_input.h  epilink_result.hpp  headerhandlerfunctions.cpp  headerhandlerfunctions.h  headermethodhandler.cpp  headermethodhandler.h  jsonhandlerfunctions.cpp  jsonhandlerfunctions.h  jsonmethodhandler.cpp  jsonmethodhandler.h  jsonutils.cpp  jsonutils.h  linkagejob.cpp  linkagejob.h  localconfiguration.cpp  localconfiguration.h  (+34 more)
include/aby/: Share.cpp  Share.h  circuit_defs.h  gadgets.cpp  gadgets.h  quotient_folder.hpp  statsprinter.cpp  statsprinter.h  util.cpp  util.h
linkage_server/: main.py
linkage_server/linkserv/: linkageserver.py  linkresult.py  secureepilinker.py
pysel/: pysel.cpp  pysel.py  pysel_test.py
scripts/: genkeys.sh  init_submodules.sh
test/: epilink.cpp  epilink.h  gdb_sel.py  random_input_generator.cpp  random_input_generator.h  test_aby.cpp  test_aby.tmuxp.yaml  test_main.cpp  test_sel-gdb.py  test_sel.cpp  test_sel.tmuxp.yaml  test_util.cpp
test_scripts/: 2term_test.sh  httplisten.py  invalidinit.json  invalidinit.sh  invalidlink.sh  l_init_tuda1.sh  l_init_tuda2.sh  lib.sh  link_tuda1_to_tuda1.sh  link_tuda1_to_tuda2.sh  linkage_result_tuda1.sh  linkage_result_tuda2.sh  localtest.sh  lr_test.sh  lr_test_twoterm.sh  monitorjob.sh  n-m_single.sh  n-m_single.tmuxp.yaml  page1.json  page2.json  page3.json  prec_stats.py  r_init_tuda1.sh  r_init_tuda1_twoterm.sh  r_init_tuda2.sh  runquery.sh  single.sh  single.tmuxp.yaml  start_abyserver.sh  testdata.json  testschema.json  threelocal.sh  threelocal.tmuxp.yaml  twolocal.sh  twolocal.tmuxp.yaml  validinit.json  validinit.sh  validlink.json  validlink.sh  validlocal.sh  (+5 more)
test_scripts/configurations/: linkRecord.template.json  linkRecords.template.json  linkage_result_TUDA1.json  linkage_result_TUDA2.json  local_init.template.json  local_init_tuda1.json  local_init_tuda2.json  mainzel_local.json  mainzel_remote.json  remote_init.template.json  remote_init_TUDA1.json  remote_init_TUDA2.json  validlink.json
test_scripts/database/: page1.json  page2.json  page3.json
test_scripts/inputs/2018-08-24/: db.json  db_1.json  local_init.json  remote_init.json  request_1.json  requests.json
